--- a/package.json
+++ b/package.json
@@ -4,10 +4,9 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
     "dev": "SET NODE_ENV=DEV&&webpack-dev-server --hot --inline",
-    "build": "webpack -p",
-    "clean": ""
+    "build": "npm run clean&&webpack -p",
+    "clean": "node ./scripts/clean"
   },
   "keywords": [],
   "author": "",
@@ -19,6 +18,7 @@
     "babel-preset-es2015": "^6.6.0",
     "babel-preset-stage-0": "^6.5.0",
     "css-loader": "^0.23.1",
+    "fs-extra": "^0.30.0",
     "node-sass": "^3.7.0",
     "path": "^0.12.7",
     "raw-loader": "^0.5.1",
