--- a/package.json
+++ b/package.json
@@ -12,12 +12,14 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "autoprefixer-loader": "^3.2.0",
     "awesome-typescript-loader": "^0.17.0",
     "babel": "^6.5.2",
     "babel-loader": "^6.2.4",
     "babel-preset-es2015": "^6.6.0",
     "babel-preset-stage-0": "^6.5.0",
     "css-loader": "^0.23.1",
+    "file-loader": "^0.8.5",
     "fs-extra": "^0.30.0",
     "node-sass": "^3.7.0",
     "path": "^0.12.7",
