--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "path": "^0.12.7",
     "raw-loader": "^0.5.1",
     "sass-loader": "^3.2.0",
+    "source-map-loader": "^0.1.5",
     "style-loader": "^0.13.1",
     "ts-loader": "^0.8.2",
     "tslint": "^3.10.2",
