--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "babel-preset-stage-0": "^6.5.0",
     "copy-webpack-plugin": "^3.0.0",
     "css-loader": "^0.23.1",
+    "csso-loader": "^0.2.0",
     "file-loader": "^0.8.5",
     "fs-extra": "^0.30.0",
     "node-sass": "^3.7.0",
@@ -35,5 +36,8 @@
     "url-loader": "^0.5.7",
     "webpack": "^1.13.0",
     "webpack-dev-server": "^1.14.1"
+  },
+  "dependencies": {
+    "angular": "^1.5.6"
   }
 }
